# pydxd

./: .gitignore  LICENSE  MANIFEST.in  README  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
pydtd/: crystal.py  dtd.py
pydtd/data/cif/: Bi2Se3_mp-541837_conventional_standard.cif  Bi2Se3_mp-541837_conventional_standardized.cif  Bi2Se3_mp-541837_symmetrized.cif  CoPdO2_mp-18919_conventional_standard.cif  Cu_mp-30_conventional_standard-test.cif  Cu_mp-30_symmetrized_0.0.cif  GaAs_mp-2534_symmetrized.cif  InP_mp-20351_symmetrized.cif  Ru_mp-33_symmetrized.cif  Si_mp-149_symmetrized.cif
pydxd/: crystal.py
pydxd/data/cif/: 2D_silica.cif  2D_silica_bilayer.cif  CoPdO2_mp-18919_symmetrized.cif  Cu_mp-30_symmetrized.cif  GaAs_mp-2534_conventional_standard.cif  Ge_mp-32_conventional_standard.cif  Ge_mp-32_symmetrized.cif
pyxro/: dtd.py  dtd2.py  main.py
pyxro/tests/: Template.par  Template2.par  lala  output.par  params.json  test.ipynb  test.py  test2.py  test_create.py  test_generic.par  test_generic_converted.json  test_generic_converted.par  test_mirror.par  test_mirror.py  test_request.py  test_simple.py  test_wrongcolumns.par  teste.par  teste2.par
src/pydxd/: crystal.py
src/pydxd/data/cif/: Cu-Bi2Se3_mp-541837_symmetrized.cif  GaAs_mp-2534_symmetrized.cif  Ge_mp-32_symmetrized.cif  InP_mp-20351_conventional_standard.cif  (+1 more)
tests/: Template.par  test_create.py  test_manylayers.par  test_mirror_converted.json  test_mirror_converted.par  test_simple.par
webapp/: app.py  callbacks.py
webapp/assets/: custom.css
